--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,6 +116,7 @@ body {
     grid-column-end: 3;
     grid-row-start: 1;
     grid-row-end: 2;
+    z-index: -99;
 }
 .landing-headline {
     font-size: 14px;
