--- a/assets/css/style-universities.css
+++ b/assets/css/style-universities.css
@@ -135,13 +135,14 @@ body {
     margin-top: 7%;
 }
 
-/* ----------------------- Universities content -------------------------- */
+/* ----------------------- Intro content -------------------------- */
 
 .img-cont img {
     width: 100%;
     position: relative;
-    margin-top: -10%;
+    margin-top: 5vh;
     z-index: -7;
+
 } 
 
 .introgrid {
@@ -182,10 +183,10 @@ h1 {
     margin-top: 32%;
 }
 
-/*   .......................... arrow ..........................  */
+/* ----------------------- Arrow -------------------------- */
  
 
-.arro {
+.arrow {
     margin-top: -10%;
     margin: auto;
     width: 30px;
@@ -209,3 +210,74 @@ h1 {
         transform: translateY(-15px);
     }
 }
+
+/* ----------------------- University grid -------------------------- */
+
+/*
+.unigrid {
+    display: grid;
+    width: 100%;
+    height: auto;
+    border-collapse: collapse;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    justify-content: center;
+    align-items: center;
+    justify-items: center;
+    grid-template-areas:
+    'avaiablecontainer avaiablecontainer avaiablecontainer'
+    'programcontainer programinfo programinfo'
+    'programcontainer programinfo programinfo'
+}
+
+
+
+.avaiablecontainer { grid-area: avaiablecontainer; }
+.programcontainer { grid-area: programcontainer; }
+.programinfo { grid-area: programinfo; }
+
+*/
+
+
+.avaiablecontainer {
+    display: grid;
+    width: 100%;
+    height: auto;
+    border-collapse: collapse;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    justify-content: center;
+    align-items: center;
+    justify-items: center;
+    grid-template-areas:
+    'uniheadline'
+    'universities';
+}
+
+.uniheadline { grid-area: uniheadline; }
+.universities { grid-area: universities; }
+
+.uniheadline {
+    margin-top: 2.5vh;
+    place-self: center;
+    color: #203F7E;
+}
+.universities {
+    display: grid;
+    grid-template-columns: repeat(5, 12.5vw);
+    grid-template-rows: auto auto 5vh;
+    margin-top: 2.5vh;
+    place-self: center;
+}
+.universities img {
+    height: 7vw;
+    transition: transform .2s;
+    place-self: center;
+}
+.universities img:hover {
+    transform: scale(1.3);
+    border: 2px solid black;
+    padding: 2.5%;
+}
+
+/* ----------------------- Program info -------------------------- */
