--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,12 +114,13 @@ body {
 }
 #mainimg {
     width: 100%;
-    margin-top: -15%;
+    height: 100%;
     grid-column-start: 1;
     grid-column-end: 3;
     grid-row-start: 1;
     grid-row-end: 2;
     z-index: -1;
+    justify-self: stretch;
 }
 .scroll {
     position: relative;
