--- a/assets/css/style-index.css
+++ b/assets/css/style-index.css
@@ -210,6 +210,7 @@ body {
     grid-template-columns: 4vw 300px;
     grid-template-rows: repeat(5, auto);
     row-gap: 3%;
+    place-self: center;
 }
 .points img{
     width: 4vw;
@@ -322,16 +323,17 @@ body {
 .prices {
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows:  150px 50px auto;
+    grid-template-rows:  auto 50px auto;
     margin-top: 50px;
 }
 #school {
-    width: 200px;
+    width: 20%;
     float: left;
     place-self:start;
     grid-column: 1;
     grid-row: 1;
     z-index: 10;
+    max-width: 200px;
 }
 .prices img{
     display: block;
@@ -344,7 +346,7 @@ body {
 .reviews {
     width: 100vw;
     display: grid;
-    grid-template-columns: 1/3 1/3 1/3;
+    grid-template-columns: auto auto auto;
     grid-template-rows: auto auto;
     margin-top: 100px;
 }
@@ -377,6 +379,7 @@ body {
     width: 80%;
     place-self: center;
     text-align: center;
+    padding: 20px;
 }
 .FAQ {
     display: grid;
@@ -384,7 +387,7 @@ body {
     row-gap: 30px;
     column-gap: 30px;
 }
-.faq_button {
+.faq_button1 , .faq_button2 , .faq_button3 , .faq_button4 , .faq_button5 , .faq_button6, .faq_button7 , .faq_button8   {
     border: none;
     background-color: transparent;
     cursor: pointer;
@@ -398,17 +401,8 @@ body {
     grid-template-rows: 50px;
     width: 25vw;
     place-self: center;
-    row-gap: 20px;
     min-width: 310px;
 
-}
-
-.question td + td {
-    justify-self: start;
-}
-
-.question td {
-    justify-self: end;
 }
 
 .question img {
@@ -420,6 +414,12 @@ body {
     width: 80%;
     place-self: center;
 }
+#answer1 , #answer2 , #answer3 , #answer3 , #answer4 , #answer5 , #answer6 , #answer7 , #answer8 {
+    width: 100%;
+    grid-column: 2;
+    display: none;
+}
+
 /*   ..........................  Footer ..........................  */
 footer{
     margin-top: 5%;
@@ -458,3 +458,71 @@ footer{
    }
 
 
+   /* -------------------------------responsiveness--------------------------------------- */
+
+@media screen and (max-width: 1000px) {
+    .chooseus {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto 1fr 1fr;
+    }
+    .chooseus p {
+        font-size: 1.5vw;
+        width: 55vw;
+    }
+    .points {
+        grid-column: 1;
+        grid-row: 3;
+        place-self: center;
+        font-size: 1.2vw;
+        grid-template-columns: 1fr;
+        width: 50%;
+    }
+    .chooseus_paragraph {
+        place-self: center;
+        width: 40vw;
+        margin: 0;
+    }
+    .process p{
+        font-size: 1.5vw;
+    }
+    .process {
+        grid-template-columns: 1fr;
+        grid-template-rows: 100px auto 60% auto;
+        row-gap: 20px;
+    }
+    .showcase {
+        grid-column: 1;
+        grid-row: 4;
+        place-self: center;
+        margin-top: 30px;
+        width: 40%;
+    }
+
+    .comparison {
+        grid-template-columns: 1fr;
+        grid-template-rows: 3;
+        margin-top: 150px;
+    }
+    .comparison p {
+        grid-column: 1;
+        grid-row: 2;
+        place-self: center;
+        font-size: 1.5vw;
+        width: 50vw;
+    }
+    .headline2 {
+        font-size: 1.5vw;
+    }
+    .comparison img {
+        grid-row: 3;
+        width: 25vw;
+        margin-top: 20px;
+
+    }
+    .headline_uni {
+        font-size: 1.5vw;
+    }
+    .prices img {
+        width: 90vw;
+    }
+}
