--- a/assets/css/service.css
+++ b/assets/css/service.css
@@ -267,8 +267,13 @@ h3 {
     margin-top: 40px;
 }
 
+h4 {
+    font-size: 18px;
+}
+
 p {
     margin-top: 10px;
+    font-size: 16px;
 }
 
 hr {
@@ -277,7 +282,8 @@ hr {
 
 h5 {
     margin-top: 70px;
-    margin-bottom: -40px;
+    margin-bottom: -30px;
+    font-size: 15px;
 }
 
 #price-img {
@@ -336,3 +342,134 @@ footer {
 }
 
 /* -----------------Responsive----------------- */
+
+@media only screen and (max-width: 1000px) {
+    h5 {
+        margin-top: 10px;
+        margin-bottom: -5px;
+    }
+    .tabcontent {
+        margin-left: 60px;
+        height: 730px;
+    }
+}
+
+@media only screen and (max-width: 960px) {
+    .service-tab {
+        margin-top: -6%;
+        margin-left: -30px;
+    }
+    .tabcontent {
+        margin-left: 60px;
+    }
+    h3 {
+        font-size: 18px;
+        margin-top: 20px;
+    }
+    p {
+        font-size: 15px;
+    }
+    h5 {
+        margin-top: 20px;
+        margin-bottom: -5px;
+    }
+}
+
+@media only screen and (max-width: 830px) {
+    h4 {
+        font-size: 16px;
+    }
+    .service-tab {
+        margin-top: -10%;
+        margin-left: -40px;
+    }
+    .tabcontent {
+        margin-left: 40px;
+        width: 95%;
+        height: 690px;
+    }
+    .arrow {
+        margin-top: -6%;
+        width: 30px;
+        height: 30px;
+    }
+    .tab {
+        width: 70%;
+        height: 600px;
+    }
+    .service-tab i {
+        font-size: 130%;
+        margin-top: -13%;
+        margin-left: 20px;
+    }
+    .tab button {
+        font-size: 13px;
+    }
+    p {
+        font-size: 14px;
+    }
+    h3 {
+        font-size: 16px;
+        margin-top: 20px;
+    }
+}
+
+@media only screen and (max-width: 715px) {
+    .service-tab {
+        margin-top: -10%;
+        margin-left: -80px;
+    }
+    .tab {
+        width: 65%;
+        height: 580px;
+    }
+    .tabcontent {
+        margin-left: 30px;
+        width: 100%;
+        height: 690px;
+    }
+    p {
+        font-size: 13px;
+    }
+    h3 {
+        font-size: 16px;
+        margin-top: 20px;
+    }
+    .topnav {
+        margin-top: -7%;
+    }
+    .topnav a {
+        margin-top: 15px;
+        padding: 10px 19px;
+        text-decoration: none;
+        font-size: 14px;
+        padding-right: 20px;
+    }
+    #logo {
+        width: 35px;
+        margin-top: 15px;
+    }
+}
+
+@media only screen and (max-width: 670px) {
+    .tab {
+        width: 60%;
+        height: 610px;
+    }
+    .tabcontent {
+        margin-left: -10px;
+        width: 130%;
+        height: 720px;
+    }
+}
+
+/* ---------------Mobile Version------------- */
+
+@media only screen and (max-width: 600px) {
+    .topnav {
+        margin-top: -7%;
+    }
+    h4 {
+        font-size: 13px;
+    }
+}
