--- a/assets/css/style-universities.css
+++ b/assets/css/style-universities.css
@@ -254,7 +254,7 @@ h1 {
     grid-template-rows: auto;
     grid-column-gap: 50px;
     justify-content: center;
-    align-items: center;
+    align-items: start;
     justify-items: center;
     grid-template-areas:
     'uniheadline uniheadline uniheadline'
@@ -302,9 +302,6 @@ h1 {
     grid-row-gap: 25px;
     grid-template-columns: 1fr;
     grid-template-rows: auto;
-    justify-content: center;
-    align-items: center;
-    justify-items: center;
     grid-template-areas:
     'undergrad'
     'postgrad'
@@ -408,16 +405,22 @@ h1 {
 
 /* ----------------------- Program info -------------------------- */
 
-.programcontainer {
+.programinfo {
+    background-color: white;
+    padding-top: 5vh;
+    padding-left: 1.5vw;
+    padding-right: 1.5vw;
+
     display: grid;
     width: 100%;
     height: auto;
     border-collapse: collapse;
     grid-row-gap: 25px;
-    grid-template-columns: 2fr;
+    grid-column-gap: 25px;
+    grid-template-columns: 1fr 1fr;
     grid-template-rows: auto;
     justify-content: center;
-    align-items: center;
+    align-items: start;
     justify-items: center;
     grid-template-areas:
     'admissionvideo admissiontext'
@@ -431,4 +434,41 @@ h1 {
 .countryimage { grid-area: countryimage; }
 .map { grid-area: map; }
 .maptext { grid-area: maptext; }
+
+.programbtn {
+    background-color: #203F7E;
+    color: #ffffff;
+    border: none;
+    padding: 2%;
+    cursor: pointer;
+    border-radius: 7px;
+    box-shadow: 0 5px rgba(48, 48, 48, 0.23);
+    outline: none;
+
+}
+
+.admissionvideo {
+    width: 100%;
+    height: 0;
+    position: relative;
+    padding-bottom: 56.25%;
+}
+.admissionvideo iframe {
+    width: 100%;
+    height: 100%;
+    top:0;
+    left: 0;
+    position: absolute;
+}
+
+.admissiontext {
+    width: 100%;
+    height: auto;
+
+}
+
+.admissiontext h3 {
+    padding-bottom: 1vh;
+    margin: 0;
+}
 
