--- a/assets/css/style-universities.css
+++ b/assets/css/style-universities.css
@@ -146,8 +146,8 @@ h1, h2, h3 {
     position: relative;
     margin-top: 5vh;
     margin-bottom: 2.5vh;
-    margin-left: 5vw;
-    margin-right: 5vw;
+    padding-left: 5vw;
+    padding-right: 5vw;
     z-index: -7;
 } 
 
@@ -247,6 +247,7 @@ h1 {
     display: grid;
     width: 100%;
     height: auto;
+    font-size: 120%;
     margin-left: 5vw;
     margin-right: 5vw;
     border-collapse: collapse;
@@ -260,6 +261,7 @@ h1 {
     'uniheadline uniheadline uniheadline'
     'universities universities universities'
     'programcontainer programinfo programinfo'
+    'studentlife studentlife studentlife';
     
 }
 
@@ -267,6 +269,7 @@ h1 {
 .universities { grid-area: universities; }
 .programcontainer { grid-area: programcontainer; }
 .programinfo { grid-area: programinfo; }
+.studentlife { grid-area: studentlife; }
 
 
 .uniheadline {
@@ -297,6 +300,7 @@ h1 {
 .programcontainer {
     display: grid;
     width: 100%;
+
     height: auto;
     border-collapse: collapse;
     grid-row-gap: 25px;
@@ -407,9 +411,9 @@ h1 {
 
 .programinfo {
     background-color: white;
-    padding-top: 5vh;
-    padding-left: 1.5vw;
-    padding-right: 1.5vw;
+    padding-top: 2.5vh;
+    padding-left: 2.5vw;
+    padding-right: 2.5vw;
 
     display: grid;
     width: 100%;
@@ -425,15 +429,14 @@ h1 {
     grid-template-areas:
     'admissionvideo admissiontext'
     'countrytext countryimage'
-    'map maptext';
+    'mapcontainer mapcontainer';
 }
 
 .admissionvideo { grid-area: admissionvideo; }
 .admissiontext { grid-area: admissiontext; }
 .countrytext { grid-area: countrytext; }
 .countryimage { grid-area: countryimage; }
-.map { grid-area: map; }
-.maptext { grid-area: maptext; }
+.mapcontainer { grid-area: mapcontainer; }
 
 .programbtn {
     background-color: #203F7E;
@@ -464,11 +467,132 @@ h1 {
 .admissiontext {
     width: 100%;
     height: auto;
-
 }
 
 .admissiontext h3 {
     padding-bottom: 1vh;
     margin: 0;
+
 }
 
+.countryimage img {
+    width: 100%;
+    height: auto;
+}
+
+.mapcontainer {
+    display: grid;
+    width: 100%;
+    height: auto;
+    border-collapse: collapse;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+    grid-column-gap: 50px;
+    justify-content: center;
+    align-items: center;
+    justify-items: center;
+    grid-template-areas:
+    'map map maptext';
+}
+
+#map { grid-area: map; }
+#maptext { grid-area: maptext; }
+
+
+
+#map {
+    width: 100%;
+    height: 15vh;
+}
+
+#maptext {
+    width: 100%;
+    height: auto;
+    margin-left: 2.5vw;
+    margin-right: 2.5vw;
+}
+
+#maptext h2 {
+    color: #203F7E;
+}
+
+/* ----------------------- Student Life -------------------------- */
+
+.studentlife {
+    display: grid;
+    width: 75%;
+    height: auto;
+    margin-bottom: 2.5vh;
+    object-fit: contain;
+    border-collapse: collapse;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    grid-row-gap: 25px;
+    grid-column-gap: 25px;
+    justify-content: center;
+    align-items: center;
+    justify-items: center;
+    grid-template-areas:
+    'studentheadline studentheadline studentheadline'
+    'image1 image2 image3'
+    'image4 image5 image6';
+}
+
+.studentheadline { grid-area: studentheadline; }
+.image1 { grid-area: image1; }
+.image2 { grid-area: image2; }
+.image3 { grid-area: image3; }
+.image4 { grid-area: image4; }
+.image5 { grid-area: image5; }
+.image6 { grid-area: image6; }
+
+.studentheadline {
+    margin-top: 2.5vh;
+    place-self: center;
+    color: #203F7E;
+}
+
+.studentlife img {
+    width: 100%;
+    height: auto;
+}
+
+/* ----------------------- Footer -------------------------- */
+
+footer {
+    width: 100%;
+    height: auto;
+    margin-top: 5%;
+    background-color:  #203F7E;
+    padding: 2%;
+    color: white;
+    font-size: 1vw;
+}
+
+   .footer-content {
+     display: flex;
+     width: 60%;
+     margin-left: auto;
+     margin-right: auto;
+     line-height: 1.7;
+   }
+
+   .footer-left {
+     margin-left: auto;
+     margin-right: auto;  
+   }
+
+   .footer-center {
+     margin-left: auto;
+     margin-right: auto;
+   }
+
+   .footer-right {
+     margin-left: auto;
+     margin-right: auto;
+   }
+
+   .footer-bottom {
+     margin-top: 3%;
+     text-align: center;
+   }
