--- a/assets/css/style-universities.css
+++ b/assets/css/style-universities.css
@@ -27,6 +27,8 @@ h1, h2, h3 {
     overflow: hidden;
     width: 100%;
     height: auto;
+    margin: 0;
+    padding: 0;
     background-color: #EBF3FA;
     font-size: 16px;
     box-shadow: 5px 2px 6px #888888a6;
@@ -141,13 +143,18 @@ h1, h2, h3 {
 
 /* ----------------------- Intro content -------------------------- */
 
+.img-cont {
+    margin-left: 2.5vw;
+    margin-right: 2.5vw;
+}
+
 .img-cont img {
     width: 100%;
     position: relative;
     margin-top: 5vh;
     margin-bottom: 2.5vh;
-    padding-left: 5vw;
-    padding-right: 5vw;
+
+
     z-index: -7;
 } 
 
@@ -217,50 +224,23 @@ h1 {
 
 /* ----------------------- University grid -------------------------- */
 
-/*
-.unigrid {
-    display: grid;
-    width: 100%;
-    height: auto;
-    border-collapse: collapse;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: auto;
-    justify-content: center;
-    align-items: center;
-    justify-items: center;
-    grid-template-areas:
-    'avaiablecontainer avaiablecontainer avaiablecontainer'
-    'programcontainer programinfo programinfo'
-    'programcontainer programinfo programinfo'
-}
-
-
-
-.avaiablecontainer { grid-area: avaiablecontainer; }
-.programcontainer { grid-area: programcontainer; }
-.programinfo { grid-area: programinfo; }
-
-*/
-
 
 .avaiablecontainer {
     display: grid;
-    width: 100%;
-    height: auto;
     font-size: 120%;
-    margin-left: 5vw;
-    margin-right: 5vw;
+    margin-left: 2.5vw;
+    margin-right: 2.5vw;
     border-collapse: collapse;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: auto;
-    grid-column-gap: 50px;
+    grid-column-gap: 5vw;
     justify-content: center;
     align-items: start;
     justify-items: center;
     grid-template-areas:
     'uniheadline uniheadline uniheadline'
     'universities universities universities'
-    'programcontainer programinfo programinfo'
+    'programcontainer programinfocontainer programinfocontainer'
     'studentlife studentlife studentlife';
     
 }
@@ -268,7 +248,7 @@ h1 {
 .uniheadline { grid-area: uniheadline; }
 .universities { grid-area: universities; }
 .programcontainer { grid-area: programcontainer; }
-.programinfo { grid-area: programinfo; }
+.programinfocontainer { grid-area: programinfocontainer; }
 .studentlife { grid-area: studentlife; }
 
 
@@ -303,7 +283,7 @@ h1 {
 
     height: auto;
     border-collapse: collapse;
-    grid-row-gap: 25px;
+    grid-row-gap: 1.5vh;
     grid-template-columns: 1fr;
     grid-template-rows: auto;
     grid-template-areas:
@@ -409,12 +389,15 @@ h1 {
 
 /* ----------------------- Program info -------------------------- */
 
+.programinfocontainer {
+    margin-left: 2.5vw;
+    margin-right: 2.5vw;
+    padding: 2.5vw;
+    background-color: white;
+}
+
 .programinfo {
     background-color: white;
-    padding-top: 2.5vh;
-    padding-left: 2.5vw;
-    padding-right: 2.5vw;
-
     display: grid;
     width: 100%;
     height: auto;
@@ -458,7 +441,7 @@ h1 {
 }
 .admissionvideo iframe {
     width: 100%;
-    height: 100%;
+    height: 16vh;
     top:0;
     left: 0;
     position: absolute;
@@ -477,7 +460,7 @@ h1 {
 
 .countryimage img {
     width: 100%;
-    height: auto;
+    height: 16vh;
 }
 
 .mapcontainer {
@@ -508,7 +491,6 @@ h1 {
 #maptext {
     width: 100%;
     height: auto;
-    margin-left: 2.5vw;
     margin-right: 2.5vw;
 }
 
@@ -564,7 +546,8 @@ footer {
     height: auto;
     margin-top: 5%;
     background-color:  #203F7E;
-    padding: 2%;
+    padding-top: 2%;
+    padding-bottom: 2%;
     color: white;
     font-size: 1vw;
 }
