--- a/assets/css/style-contact.css
+++ b/assets/css/style-contact.css
@@ -453,9 +453,9 @@ body {
 
       .contact-intro{
         width: 70%;
-        margin-top: 15%;
+        margin-top: 17%;
         margin-left: 30%;
-        font-size: 1em;
+        font-size: 2vw;
         /* background-color: darkgoldenrod; */
       }
 
