--- a/assets/css/style-index.css
+++ b/assets/css/style-index.css
@@ -576,6 +576,7 @@ footer{
     }
     .landing-headline-paragraph {
         max-width: 50%;
+        font-size: 1.3vw;
     }
     .headline_reviews {
         font-size: 1.5vw;
@@ -606,17 +607,145 @@ footer{
 }
 
 @media screen and (max-width: 650px) {
+    .landing-img-grid {
+        grid-template-columns: 40% 60%;
+        grid-template-rows: 20vw 20vw 10vw;
+    }
+    .landing-headline {
+        font-size: 2vw;
+        max-width: 70%;
+    }
+    .landing-arrow {
+        display: none;
+    }
+    .landing-headline-paragraph {
+        font-size: 2vw;
+        max-width: 70%;
+    }
+    .landing-contact-button {
+        height: auto;
+    }
+    .buttonStyle1 {
+        width: 15vw;
+        height: 5vw;
+        font-size: 2vw;
+    }
+    .chooseus {
+        grid-template-columns: 100vw;
+        grid-template-rows: 10% 45% 50%;
+        column-gap: 0;
+    }
+    .headline2 {
+        font-size: 2.5vw;
+    }
+    .chooseus p {
+        width: 70vw;
+        font-size: 2.5vw;
+    }
+    .chooseus img {
+        width: 7vw;
+    }
+    .process {
+        margin-top: 20%;
+        grid-template-rows: 12% 75% 40%;
+        row-gap: 0;
+    }
+    .showcase {
+        grid-row: 3;
+        width: 60vw;
+        place-self: start;
+        justify-self: center;
+    }
+    .steps {
+        width: 70vw;
+        row-gap: 5%;
+        margin-top: 0;
+        place-self: start;
+        justify-self: center;
+    }
+    .steps p {
+        font-size: 2.5vw;
+    }
+    .points {
+        margin-top: 5%;
+    }
+    .comparison {
+        margin-top: 35%;
+    }
+    .comparison p{
+        font-size: 2.5vw;
+        width: 70vw;
+    }
+    .comparison img {
+        width: 50vw;
+    }
+    .uni_grid {
+        margin-top: 0;
+    }
+    .universities {
+        grid-template-rows: auto auto 50%;
+    }
+    .headline_uni {
+        font-size: 2.5vw;
+    }
+    .prices {
+        margin-top: 20%;
+        grid-template-rows: 10% 80%;
+    }
+    .prices img {
+        width: 100vw;
+    }
+    .reviews {
+        grid-template-rows: 10% 80%;
+        margin-top: 10%;
+    }
     .review {
         grid-template-rows: 25% 5% 50%;
         row-gap: 10px;
+        grid-row-start: 2;
+        grid-row-end: 2;
+        margin-top: 10%;
+        width: 85%;
+    }
+    .headline_reviews {
+        font-size: 2.5vw;
+        grid-column-start: 1;
+        grid-column-end: 4;
+        grid-row: 1;
+        margin-top: 0;
     }
     .review img {
-        width: 15%;
-        min-width: 60px;
-        margin-top: 20px;
+        width: 45%;
+        min-width: 0;
+        margin-top: 10%;
     }
-    .FAQ p {
+    .review h3 {
+        font-size: 2.5vw;
+    }
+    .review p {
+        padding: 0;
         font-size: 2vw;
+    }
+    .FAQ {
+        margin-top: 10%;
+    }
+    .questionr p{
+        font-size: 2.5vw;
+    }
+    .questionl p {
+        font-size: 2.5vw;
+    }
+    #car {
+        display: none;
+    }
+    #plane {
+        display: none;
+    }
+    #airport {
+        display: none;
+    }
+    #school {
+        display: none;
     }
 
 }
